<resources>
    <string name="app_name">Redface</string>
    <string name="guest_username">Guest</string>
    <string name="action_settings">Settings</string>
    <string name="action_topics_filter">Topic filters</string>
    <string name="action_go_to_last_read_page">Go to last read page</string>
    <string name="action_go_to_first_page">Go to first page</string>
    <string name="action_go_to_last_page">Go to last page</string>
    <string name="action_go_to_specific_page">Go to page…</string>
    <string name="action_reply_to_topic">Post a reply</string>
    <string name="action_copy_link">Copy a link to this topic</string>
    <string name="action_share">Share</string>
    <string name="action_refresh_topic">Refresh</string>
    <string name="action_search">Rechercher</string>
    <string name="action_show_all_spoilers">Show all spoilers</string>
    <string name="action_unflag_topic">Remove flag</string>
    <string name="action_open_in_browser">Open topic in browser</string>
    <string name="link_sucessfully_copied">Link copied to clipboard</string>
    <string name="flag_successfully_removed">Flag successfully removed</string>
    <string name="error_removing_flag">Error while removing flag</string>
    <string name="action_topics_filter_title">Topics filter</string>
    <string name="action_topics_filter_all">All</string>
    <string name="action_topics_filter_favorites">Favorites</string>
    <string name="action_topics_filter_participated">Favorites &amp; Starred</string>
    <string name="action_topics_filter_read">Read</string>
    <string name="action_topic_search_title">Topic search filters</string>
    <string name="action_topic_search_filter">Filter</string>
    <string name="action_topic_search_from_first_page">From first page</string>
    <string name="action_meta_sort">Sorting options</string>
    <string name="action_meta_sort_by_date">Sort topics by date</string>
    <string name="action_meta_group_by_cats">Group topics by categories</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="category_icon_description">Category icon</string>
    <string name="navdrawer_item_private_messages">Private messages</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_profile">Profile</string>
    <string name="navdrawer_item_my_topics">My topics</string>
    <string name="navdrawer_add_account">Add account</string>
    <string name="navdrawer_profile_picture">Profile picture</string>
    <string name="default_fragment_text">Please select a category from the navigation drawer</string>
    <string name="settings_title">Settings</string>
    <string name="pref_general_title">General</string>
    <string name="pref_general_summary">Yes sir !</string>
    <string name="pref_notify_private_messages_title">Notification for private messages</string>
    <string name="pref_notify_private_messages_summary">Be notified when you receive a new private message</string>
    <string name="pref_network_title">Network</string>
    <string name="pref_network_summary">Configure network related options (proxy, …)</string>
    <string name="pref_activate_proxy_title">Enable proxy</string>
    <string name="pref_activate_proxy_summary">Use a proxy to connect to the forum</string>
    <string name="pref_proxy_host_title">Proxy host</string>
    <string name="pref_proxy_port_title">Proxy port</string>
    <string name="pref_proxy_settings">Proxy settings</string>
    <string name="pref_appearance_title">Appearance</string>
    <string name="pref_appearance_summary">Change how the application looks</string>
    <string name="pref_show_fully_read_topics_title">Show fully read topics</string>
    <string name="pref_enable_internal_browser_title">Enable internal browser</string>
    <string name="pref_enable_internal_browser_summary">Open all external links in the internal browser</string>
    <string name="pref_topic_list_compact_mode_title">Compact mode</string>
    <string name="pref_topic_list_compact_mode_summary">Display topic list in a compact way</string>
    <string name="pref_topic_list_compact_mode_more_info_title">Show additional details</string>
    <string name="pref_topic_list_compact_mode_more_info_summary">More details in compact mode</string>
    <string name="pref_double_tap_to_refresh_title">Enable double tap to refresh</string>
    <string name="pref_double_tap_to_refresh_summary">Double tapping inside a topic will trigger a page refresh</string>
    <string name="pref_show_previous_page_last_post_title">Show previous page last post</string>
    <string name="pref_show_previous_page_last_post_summary">Display the last post of the previous page at the top of the page</string>
    <string name="pref_refresh_topic_list_title">Refresh topic list</string>
    <string name="pref_refresh_topic_list_summary">Refresh topic list when returning from a topic</string>
    <string name="pref_show_fully_read_topics_summary">This option only works if you are not in the Meta category</string>
    <string name="pref_use_modern_quote_style">Use modern quote style</string>
    <string name="pref_show_navigation_buttons_title">Show navigation buttons</string>
    <string name="pref_show_navigation_buttons_summary">Display "go to top" and "go to bottom" buttons when reading a topic</string>
    <string name="pref_enable_egoquote_title">Enable EgoQuote</string>
    <string name="pref_enable_egoquote_summary">Highlights posts in which you are quoted</string>
    <string name="pref_default_topic_filter">Default topic filter</string>
    <string name="pref_default_topic_filter_default" translatable="false">NONE</string>
    <string-array name="pref_default_topic_filter_values">
        <item>All</item>
        <item>Favorites</item>
        <item>Favorites &amp; Starred</item>
        <item>Read</item>
    </string-array>
    <string-array name="pref_default_topic_filter_entries" translatable="false">
        <item>NONE</item>
        <item>FAVORITE</item>
        <item>PARTICIPATED</item>
        <item>READ</item>
    </string-array>
    <string name="pref_default_category">Default category</string>
    <string name="pref_default_category_default" translatable="false">666</string>
    <string-array name="pref_default_category_values">
        <item>@string/navdrawer_item_my_topics</item>
    </string-array>
    <string-array name="pref_default_category_entries" translatable="false">
        <item>@string/pref_default_category_default</item>
    </string-array>
    <string name="download_strategy_never">Never</string>
    <string name="download_strategy_fast_connection">On fast connection</string>
    <string name="download_strategy_wifi">On WiFi</string>
    <string name="download_strategy_always">Always</string>
    <string name="pref_images_settings">Images</string>
    <string name="pref_images_strategy">Display images</string>
    <string name="pref_images_strategy_default" translatable="false">ALWAYS</string>
    <string-array name="pref_images_strategy_values" translatable="false">
        <item>NEVER</item>
        <item>FASTCX</item>
        <item>WIFI</item>
        <item>@string/pref_images_strategy_default</item>
    </string-array>
    <string-array name="pref_images_strategy_entries">
        <item>@string/download_strategy_never</item>
        <item>@string/download_strategy_fast_connection</item>
        <item>@string/download_strategy_wifi</item>
        <item>@string/download_strategy_always</item>
    </string-array>
    <string name="pref_avatars_strategy">Display avatars</string>
    <string name="pref_avatars_strategy_default" translatable="false">ALWAYS</string>
    <string-array name="pref_avatars_strategy_values" translatable="false">
        <item>NEVER</item>
        <item>FASTCX</item>
        <item>WIFI</item>
        <item>@string/pref_avatars_strategy_default</item>
    </string-array>
    <string-array name="pref_avatars_strategy_entries">
        <item>@string/download_strategy_never</item>
        <item>@string/download_strategy_fast_connection</item>
        <item>@string/download_strategy_wifi</item>
        <item>@string/download_strategy_always</item>
    </string-array>
    <string name="pref_smileys_strategy">Display smileys</string>
    <string name="pref_smileys_strategy_default" translatable="false">ALWAYS</string>
    <string-array name="pref_smileys_strategy_values" translatable="false">
        <item>NEVER</item>
        <item>FASTCX</item>
        <item>WIFI</item>
        <item>@string/pref_smileys_strategy_default</item>
    </string-array>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_default" translatable="false">LIGHT</string>
    <string name="pref_font_size_title">Font size</string>
    <string name="pref_font_size_summary">Customize the font size (currently only inside a topic)</string>
    <string name="pref_font_size_default" translatable="false">NORMAL</string>
    <string name="pref_default_meta_ordering">Default ordering for \"My topics\" screen</string>
    <string name="pref_default_meta_ordering_default" translatable="false">SORT_BY_DATE</string>
    <string name="pref_rehost_settings">Image Rehosting service</string>
    <string name="pref_rehost_provider">Default image rehosting provider</string>
    <string name="pref_rehost_provider_rehost" translatable="false">Reho.st</string>
    <string name="pref_default_uploaded_image_variant">Default quality for uploaded images</string>
    <string name="pref_default_uploaded_image_variant_default" translatable="false">MEDIUM</string>
    <string name="pref_notification_settings">Notifications</string>
    <string name="pref_enable_pm_notifications_title">Enable private messages notifications</string>
    <string name="pref_enable_pm_notifications_summary">Be notified when you receive a new private message</string>
    <string name="pref_pm_notification_frequency">Polling frequency</string>
    <string name="pref_pm_notification_frequency_default" translatable="false">120</string>
    <string name="pref_blacklist_activate">Activate blacklist</string>
    <string name="pref_blacklist_activate_summary">Authorize blaclist members to be blocked</string>
    <string name="pref_blacklist_show_blocked">Show blocked user</string>
    <string name="pref_blaclist_show_blocked_summary">Show the name of the blocked user instead of the message</string>
    <string name="pref_enable_smilies_actions_title">Enable smilies actions</string>
    <string name="pref_enable_smilies_actions_summary">Allow actions on smileys in a topic. Can slow down the display of messages a little bit.</string>
    <string name="pref_technical_category">Technical</string>
    <string name="pref_clear_categories_cache_label">Clear category cache</string>
    <string name="pref_clear_categories_cache_summary">Clears the category cache for the given user</string>
    <string name="pref_log_in_again_label">Log-in again</string>
    <string name="pref_log_in_again_summary">Opens the log-in screen</string>
    <string name="insert_smiley_tag_button_description">Insert a smiley tag</string>
    <string name="make_text_bold_button_description">Make text bold</string>
    <string name="make_text_italic_button_description">Make text italic</string>
    <string name="insert_quote_button_description">Insert quote</string>
    <string name="insert_spoiler_button_description">Insert spoiler</string>
    <string name="insert_link_button_description">Make text italic</string>
    <string name="insert_image_description">Insert image</string>
    <string name="popular_smileys_button_description">Popular smileys</string>
    <string name="recent_smileys_button_description">Recent smileys</string>
    <string name="default_smileys_button_description">Default smileys</string>
    <string name="show_smileys_picker">Show smileys picker</string>
</resources>