<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 Ayuget
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <CheckBoxPreference
        android:key="private_messages_notifications"
        android:title="@string/pref_notify_private_messages_title"
        android:summary="@string/pref_notify_private_messages_summary"
        android:defaultValue="true" />
        -->
    <ListPreference
        android:key="default_category"
        android:title="@string/pref_default_category"
        android:defaultValue="@string/pref_default_category_default"
        android:entries="@array/pref_default_category_values"
        android:entryValues="@array/pref_default_category_entries" />

    <ListPreference
        android:key="default_topic_filter"
        android:title="@string/pref_default_topic_filter"
        android:defaultValue="@string/pref_default_topic_filter_default"
        android:entries="@array/pref_default_topic_filter_values"
        android:entryValues="@array/pref_default_topic_filter_entries" />

    <CheckBoxPreference
        android:key="show_fully_read_topics"
        android:title="@string/pref_show_fully_read_topics_title"
        android:summary="@string/pref_show_fully_read_topics_title"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="show_previous_page_last_post"
        android:title="@string/pref_show_previous_page_last_post_title"
        android:summary="@string/pref_show_previous_page_last_post_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="refresh_topic_list"
        android:title="@string/pref_refresh_topic_list_title"
        android:summary="@string/pref_refresh_topic_list_summary"
        android:defaultValue="false" />

    <ListPreference
        android:key="meta_page_ordering"
        android:title="@string/pref_default_meta_ordering"
        android:defaultValue="@string/pref_default_meta_ordering_default"
        android:entries="@array/pref_default_meta_ordering_values"
        android:entryValues="@array/pref_default_meta_ordering_entries" />

    <CheckBoxPreference
        android:key="enable_internal_browser"
        android:title="@string/pref_enable_internal_browser_title"
        android:summary="@string/pref_enable_internal_browser_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="enable_smilies_actions"
        android:title="@string/pref_enable_smilies_actions_title"
        android:summary="@string/pref_enable_smilies_actions_summary"
        android:defaultValue="true" />

    <PreferenceCategory android:title="@string/pref_notification_settings">
        <CheckBoxPreference
            android:key="enable_pm_notifications"
            android:title="@string/pref_enable_pm_notifications_title"
            android:summary="@string/pref_enable_pm_notifications_summary"
            android:defaultValue="true" />
        <ListPreference
            android:key="pm_notification_polling_frequency"
            android:title="@string/pref_pm_notification_frequency"
            android:defaultValue="@string/pref_pm_notification_frequency_default"
            android:entries="@array/pref_pm_notification_frequency_entries"
            android:entryValues="@array/pref_pm_notification_frequency_values"
            android:dependency="enable_pm_notifications" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_images_settings">
        <ListPreference
            android:key="images_strategy"
            android:title="@string/pref_images_strategy"
            android:defaultValue="@string/pref_images_strategy_default"
            android:entries="@array/pref_images_strategy_entries"
            android:entryValues="@array/pref_images_strategy_values" />
        <ListPreference
            android:key="avatars_strategy"
            android:title="@string/pref_avatars_strategy"
            android:defaultValue="@string/pref_avatars_strategy_default"
            android:entries="@array/pref_avatars_strategy_entries"
            android:entryValues="@array/pref_avatars_strategy_values" />
        <ListPreference
            android:key="smileys_strategy"
            android:title="@string/pref_smileys_strategy"
            android:defaultValue="@string/pref_smileys_strategy_default"
            android:entries="@array/pref_smileys_strategy_entries"
            android:entryValues="@array/pref_smileys_strategy_values" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_rehost_settings">
        <ListPreference android:key="rehost_default_provider"
            android:title="@string/pref_rehost_provider"
            android:defaultValue="@string/pref_rehost_provider_rehost"
            android:entries="@array/pref_rehost_providers_values"
            android:entryValues="@array/pref_rehost_providers_entries"/>
        <ListPreference
            android:key="rehost_default_variant"
            android:title="@string/pref_default_uploaded_image_variant"
            android:defaultValue="@string/pref_default_uploaded_image_variant_default"
            android:entries="@array/pref_default_uploaded_image_variant_values"
            android:entryValues="@array/pref_default_uploaded_image_variant_entries" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_technical_category">
        <Preference
            android:key="clear_categories_cache"
            android:title="@string/pref_clear_categories_cache_label"
            android:summary="@string/pref_clear_categories_cache_summary" />

        <Preference
            android:key="open_login_screen"
            android:title="@string/pref_log_in_again_label"
            android:summary="@string/pref_log_in_again_summary" />
    </PreferenceCategory>
</PreferenceScreen>
