<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Ayuget
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="theme"
        android:title="@string/pref_theme_title"
        android:defaultValue="@string/pref_theme_default"
        android:entries="@array/pref_theme_values"
        android:entryValues="@array/pref_theme_entries" />

    <CheckBoxPreference
        android:key="topic_list_compact_mode"
        android:title="@string/pref_topic_list_compact_mode_title"
        android:summary="@string/pref_topic_list_compact_mode_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="enable_egoquote"
        android:title="@string/pref_enable_egoquote_title"
        android:summary="@string/pref_enable_egoquote_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="double_tap_to_refresh_enabled"
        android:title="@string/pref_double_tap_to_refresh_title"
        android:summary="@string/pref_double_tap_to_refresh_summary"
        android:defaultValue="true" />

    <ListPreference
        android:key="font_size"
        android:title="@string/pref_font_size_title"
        android:summary="@string/pref_font_size_summary"
        android:defaultValue="@string/pref_font_size_default"
        android:entries="@array/pref_font_size_values"
        android:entryValues="@array/pref_font_size_entries" />
</PreferenceScreen>
