<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Ayuget
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="20"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionLayout="@layout/actionbar_topic_search_layout" />

    <item
        android:title="@string/action_topic_search_title"
        android:id="@+id/action_topic_search_filters"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_filter_list_white_24dp">
        <menu>
            <item
                android:title="@string/action_topic_search_filter"
                android:id="@+id/action_topic_search_filter"
                android:checkable="true"/>
            <item
                android:title="@string/action_topic_search_from_first_page"
                android:id="@+id/action_topic_search_from_first_page"
                android:checkable="true" />
        </menu>
    </item>

    <item
        android:id="@+id/action_refresh_topic"
        android:title="@string/action_refresh_topic"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_all_spoilers"
        android:title="@string/action_show_all_spoilers"
        android:orderInCategory="75"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_to_first_page"
        android:title="@string/action_go_to_first_page"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_to_specific_page"
        android:title="@string/action_go_to_specific_page"
        android:orderInCategory="150"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_to_last_page"
        android:title="@string/action_go_to_last_page"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy_link"
        android:title="@string/action_copy_link"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_in_browser"
        android:title="@string/action_open_in_browser"
        android:orderInCategory="500"
        app:showAsAction="never" />
</menu>
