<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 nbonnec
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="enable_blacklist"
        android:title="@string/pref_blacklist_activate"
        android:summary="@string/pref_blacklist_activate_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="show_blocked_user"
        android:title="@string/pref_blacklist_show_blocked"
        android:summary="@string/pref_blaclist_show_blocked_summary"
        android:defaultValue="true" />
</PreferenceScreen>