<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Ayuget
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout
    android:id="@+id/reply_window_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_semi_transparent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/main_reply_frame"
        android:background="?attr/appBackgroundColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">
        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar_reply_actions"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            style="@style/ReplyActionsToolbar"
            >
            <com.pnikosis.materialishprogress.ProgressWheel
                android:id="@+id/sending_message_spinner"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_gravity="right"
                wheel:matProg_barColor="?attr/replyToolbarIconsColor"
                wheel:matProg_progressIndeterminate="true" />

            </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar_reply_extra"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            style="@style/ReplyOptionsToolbar">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/show_smileys_picker"
                        android:contentDescription="@string/show_smileys_picker"
                        style="@style/ReplyOptionsIcon"
                        android:src="@drawable/ic_action_insert_emoticon" />

                    <ImageButton
                        android:id="@+id/insert_image_button"
                        android:contentDescription="@string/insert_image_description"
                        style="@style/ReplyOptionsIcon"
                        android:src="@drawable/ic_action_insert_photo" />

                    <ImageButton
                        android:id="@+id/insert_manual_smiley_button"
                        android:contentDescription="@string/insert_smiley_tag_button_description"
                        style="@style/ReplyOptionsIcon"
                        android:src="@drawable/ic_action_smiley_tag" />

                    <ImageButton
                        android:id="@+id/make_text_bold_button"
                        android:contentDescription="@string/make_text_bold_button_description"
                        style="@style/ReplyOptionsIcon"
                        android:src="@drawable/ic_action_format_bold" />

                    <ImageButton
                        android:id="@+id/make_text_italic_button"
                        android:contentDescription="@string/make_text_italic_button_description"
                        style="@style/ReplyOptionsIcon"
                        android:src="@drawable/ic_action_format_italic" />

                    <ImageButton
                        android:id="@+id/insert_quote_button"
                        android:contentDescription="@string/insert_quote_button_description"
                        style="@style/ReplyOptionsIcon"
                        android:src="@drawable/ic_action_format_quote" />

                    <ImageButton
                        android:id="@+id/insert_link_button"
                        android:contentDescription="@string/insert_link_button_description"
                        style="@style/ReplyOptionsIcon"
                        android:src="@drawable/ic_action_insert_link" />

                    <ImageButton
                        android:id="@+id/insert_spoiler_button"
                        android:contentDescription="@string/insert_spoiler_button_description"
                        style="@style/ReplyOptionsIcon"
                        android:src="@drawable/ic_action_crop_square" />
                </LinearLayout>

            </HorizontalScrollView>

            </android.support.v7.widget.Toolbar>



        <EditText
            android:id="@+id/reply_text"
            android:layout_above="@id/toolbar_reply_extra"
            android:layout_below="@id/toolbar_reply_actions"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textSize="@dimen/text_size_default"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"
            android:background="@null"
            android:padding="@dimen/reply_edit_text_padding" />

        <include layout="@layout/image_selection_view" />
    </RelativeLayout>

    <!-- Smiley selector -->
    <include layout="@layout/smiley_selector" />

    <!-- Smileys toolbar -->
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/smileys_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        style="@style/RedfaceSmileysToolbar">
        <ImageButton
            android:id="@+id/default_smileys"
            android:contentDescription="@string/default_smileys_button_description"
            style="@style/ReplyOptionsIcon"
            android:src="@drawable/ic_action_insert_emoticon" />

        <ImageButton
            android:id="@+id/recent_smileys"
            android:contentDescription="@string/recent_smileys_button_description"
            style="@style/ReplyOptionsIcon"
            android:src="@drawable/ic_action_access_time" />

        <ImageButton
            android:id="@+id/popular_smileys"
            android:contentDescription="@string/popular_smileys_button_description"
            style="@style/ReplyOptionsIcon"
            android:src="@drawable/ic_action_whatshot" />

        <android.support.v7.widget.SearchView
            android:id="@+id/smileys_search"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
        </android.support.v7.widget.Toolbar>

</FrameLayout>
